--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "import re\n",
     "\n",
     "raw = []\n",
-    "f = open(r'C:\\Users\\Yang\\Desktop\\project\\ytn_article.csv', 'r', encoding='utf-8')\n",
+    "f = open(r'C:\\Users\\thehb\\OneDrive\\Desktop\\sentenceExtraction_with_Article\\ytn_article.csv', 'r', encoding='utf-8')\n",
     "rdr = csv.reader(f)\n",
     "for line in rdr:\n",
     "    raw.append(line)\n",
@@ -34,9 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\thehb\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\jpype\\_core.py:210: UserWarning: \n",
+      "-------------------------------------------------------------------------------\n",
+      "Deprecated: convertStrings was not specified when starting the JVM. The default\n",
+      "behavior in JPype will be False starting in JPype 0.8. The recommended setting\n",
+      "for new code is convertStrings=False.  The legacy value of True was assumed for\n",
+      "this session. If you are a user of an application that reported this warning,\n",
+      "please file a ticket with the developer.\n",
+      "-------------------------------------------------------------------------------\n",
+      "\n",
+      "  \"\"\")\n"
+     ]
+    }
+   ],
    "source": [
     "# 품사 태깅(주어진 텍스트를 형태소 단위로 나누고 나눠진 형태소를 해당하는 품사와 함께 리스트화)\n",
     "# stemming(단어들을 원형으로 포현), normalization(표현 방법이 다른 단어들을 통합시켜 같은 단어로 만듬)\n",
@@ -50,12 +67,12 @@
     "    # norm은 정규화, stem은 근어로 표시하기를 나타냄\n",
     "    return ['/'.join(t) for t in okt.pos(doc, norm=True, stem=True)]\n",
     "\n",
-    "os.chdir(r'C:\\Users\\Yang\\Desktop\\project') # 경로 설정"
+    "os.chdir(r'C:\\Users\\thehb\\OneDrive\\Desktop\\sentenceExtraction_with_Article') # 경로 설정"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,6 +218,130 @@
     "#print(embedding_model.most_similar(positive=[\"피해/Noun\"], topn=100))\n",
     "print([i[0] for i in word_similar])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words_damage = ['인명', '침수', '재산', '화재', '사고', '농작물', '사망자']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 기사를 문장별로 토큰화"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from konlpy.tag import Kkma\n",
+    "kkma = Kkma()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence_tokens = [] # 기사를 문장별로 토큰화한 결과값을 list에 저장\n",
+    "articles = list(set(text)) # 중복되는 기사 제거\n",
+    "for article in articles:\n",
+    "    sentence_tokens.append(kkma.sentences(article))    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## '피해'라는 단어와 top7 단어가 함께 들어있는 문장 추출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentences_damage = []\n",
+    "for sentences in sentence_tokens:\n",
+    "    for sentence in sentences:\n",
+    "        isExist = False        \n",
+    "        for word_damage in words_damage:\n",
+    "            if isExist == False:\n",
+    "                if (word_damage in sentence) and ('피해' in sentence):\n",
+    "                    sentences_damage.append(sentence)\n",
+    "                    isExist = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['따라서 침수 피해 없도록 배수로 점검해야 되겠고 특히 밤에 제주도 통과하기 때문에 대피 준비도 우리가 말하는 손전등 요즘은 다 휴대폰들 가지고 다니니까 통신 문제는 그렇게 큰 문제가 없는데. 문제는 많은 비로 강풍으로 인해서 정전이 되는 사태가 발생을 하거든요.',\n",
+       " '산사태와 침수 피해가 우려되는 만큼 대비 철저히 해 주시기 바랍니다.',\n",
+       " '잇따른 농작물 피해에 이어 계곡과 약수터의 물까지 말라가고 있습니다.',\n",
+       " '한국도로 공사는 날씨로 인해 도로 상황이 좋았고 최근 대형 교통사고가 여러 건 발생하면서 운전자들의 경각심이 높아 진 것도 사고 피해가 감소한 원인으로 보인다고 설명했습니다.',\n",
+       " '신 현우 옥시 전 사장 등 증인과 참고인 18명이 출석하지 않기로 하거나 출석 여부가 불확실한 가운데 특위는 정부와 업체 관계자들을 상대로 가습기 살균제 피해 사고의 책임 소재와 재발방지 대책을 추궁하고 있습니다.',\n",
+       " '시설물 피해와 안전사고가 우려되는 상황입니다.',\n",
+       " '물놀이를 할 때는 안전관리요원이 있는 곳에서 구명조끼 등 안전장비를 착용해야 인명 피해를 줄일 수 있습니다.',\n",
+       " '[ 앵커] 어제 충북과 강원 경북 등 중부 지역 곳곳에 굵은 우박이 떨어졌는데요 짧은 시간 쏟아졌지만 추석을 앞두고 사과 등 농작물이 큰 피해를 봤습니다.',\n",
+       " '우박은 국지적이며 돌발적인 현상으로 정확한 발생지역을 사실상 예측하기가 어렵고 얼음 알갱이가 떨어지는 힘 때문에 짧은 시간의 우 박에도 농작물에 심각한 피해를 주게 됩니다.',\n",
+       " '그런 데 이번 우박으로 농작물 피해가 클 것 같은데 상황 어떤 가요[ 기자] 네']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sentences_damage[10:20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "369"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(sentences_damage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(r'C:\\Users\\thehb\\Code\\sentenceExtraction_with_Article\\sentences_damage.csv', 'w', encoding='utf-8', newline='')\n",
+    "wr = csv.writer(f)\n",
+    "for i in sentences_damage:\n",
+    "    wr.writerow([i])\n",
+    "f.close()"
+   ]
   }
  ],
  "metadata": {
@@ -219,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
